# yala

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: main.rs  models.rs  state.rs
src/assets/: mod.rs  scripts.rs  styles.rs
src/handlers/: home.rs  list.rs  mod.rs  sse.rs
src/templates/: home.rs  layout.rs  list.rs  mod.rs
