[package]
name = "yala"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
maud = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6.1"
futures = "0.3"
tokio-stream = { version = "0.1.18", features = ["sync"] }
